Version 1.5.2.9003
------------------------------------------------------------------------------
* Bug fixes and improvements with the most significant listed below:
  - import
  "0" now handled as NA.
  - calculateBalance / calculateBalance_gui
  Added option to calculate Hb by LMW/HMW, and updated test-calculateBalance accordingly.
* Removed global variables for ggplot2 in 'globals.R', added importFrom in functions.

Version 1.5.2.9002
------------------------------------------------------------------------------
* Bug fixes and improvements with the most significant listed below:
  - calculateBalance_gui
  Added automatic calculation of average peak height 'H'.
  - plotBalance_gui
  Added new plot options 'Hb vs. Marker' and 'Lb vs. Marker'.
  Added options to plot all data 'Facet per marker and wrap by dye'. 
  - calculateDropout_gui
  Added automatic calculation of average peak height 'H'.
  - editData_gui
  Added option to limit number of rows.
  Added option to show attributes.
  - plotDistribution_gui
  NA's now removed prior to plotting and subtracted from number of observations.
  - cropData_gui
  Option to remove NA (earlier NA was automatically removed).
  Fixed 'Info' not updated when selecting a column.
* New functions:
  - colConvert
  - calculateSpike / calculateSpike_gui
  - calculateAllele
* New exported function:
  - detectKit
* Added attributes for the following functions:
  import
  import_gui
  calculateAT
  calculateAT_gui
  calculateBalance
  calculateBalance_gui
  calculateDropout
  calculateDropout_gui
  calculateStutter
  calculateStutter_gui

Version 1.5.2.9001
------------------------------------------------------------------------------
* Bug fixes and improvements with the most significant listed below:
  - readPanelsFile
  Convert all color names to lower case. Fixes kit plot D16 bug in Fusion 6C.
  - calculateDropout / calculateDropout_gui