@@ -5,7 +5,12 @@ Version 1.5.2.9003
   "0" now handled as NA.
   - calculateBalance / calculateBalance_gui
   Added option to calculate Hb by LMW/HMW, and updated test-calculateBalance accordingly.
+  - addData / addData_gui
+  New parameter to specify columns to add.
 * Removed global variables for ggplot2 in 'globals.R', added importFrom in functions.
+* Added attributes for the following functions:
+  addData
+  addData_gui
 
 Version 1.5.2.9002
 ------------------------------------------------------------------------------
